# hackfs2024

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
deploy-backup/balancer/: Cargo.toml
deploy-backup/balancer/src/: main.rs
deploy-backup/worker/: Cargo.toml
deploy-backup/worker/src/: main.rs
fluence-module/: Dockerfile
fluence-module/.fluence/: provider-artifacts.yaml  workers.yaml
fluence-module/.fluence/aqua/: deals.aqua  services.aqua
fluence-module/.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
fluence-module/src/aqua/: main.aqua
fluence-module/src/gateway/: README.md  package-lock.json
fluence-module/src/gateway/src/: relays.json
fluence-module/src/gateway/src/app/: index.js
fluence-module/src/gateway/src/compiled-aqua/: main.d.ts  main.js
fluence-module/src/services/myService/myService/: Cargo.toml
fluence-module/src/services/myService/myService/src/: main.rs  testing12.rs
rust-modules/: cargo.toml
rust-modules/wasm-lib/: Cargo.toml
rust-modules/wasm-lib/pkg/: package.json  wasm_data_processor.d.ts  wasm_data_processor.js  wasm_data_processor_bg.wasm  wasm_data_processor_bg.wasm.d.ts
rust-modules/wasm-lib/src/: lib.rs
rust-modules/zk_snarks/: Cargo.toml
rust-modules/zk_snarks/src/: lib.rs
