[package]
name = "zk_snarks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
actix-web = "4.0"
bellman = "0.14.0"
ff = "0.13.0"
thiserror = "1.0.61"
rand_chacha = "0.3.1"
actix-rt = "2.9.0"
sha2 = "0.10.8"
chrono = "0.4.38"
subtle = "2.5.0"
rand_jitter = "0.4.0"
hex = "0.4.3"

bls12_381 = { version = "0.8.0", features = ["pairing"] }  # Combined entry with feature
