[package]
name = "myService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-groth16 = "0.4.0"
chrono = "0.4.23"
hex = "0.4.3"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
light-poseidon = "0.2.0"
thiserror = "1.0.38"
ark-std = "0.4.0"
ark-serialize = "0.4.2"
ark-ec = "0.4.2"


[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
